<resources>
    <string name="custombg_enable">enable custombg</string>
    <string name="custombg_type">custombg type</string>
    <string name="custombg_image_scale">custombg image scale</string>
    <string name="opacity">Opacity</string>
    <string name="custombg_orientation">Orientation</string>
    <string name="battery">Battery</string>
    <string name="stock_battery">Show stock battery</string>
    <string name="battery_percentage">Show battery percentage</string>
    <string name="battery_color_percentage">Percentage color</string>
    <string name="font">Font</string>
    <string name="size">Size</string>
    <string name="clock">Clock</string>
    <string name="visibility">Visibility</string>
    <string name="position">Position</string>
    <string name="Colors">Colors</string>
    <string name="elements_order">Elements to show / order</string>
    <string name="elements_order_date">Date elements and order</string>
    <string name="date_separator">Date separator</string>
    <string name="seconds">Seconds</string>
    <string name="wholeday">Show whole day</string>
    <string name="wholeyear">Show whole year</string>
    <string name="ampm_uppercase">Show AM/PM in uppercase</string>
    <string name="fonts">Fonts</string>
    <string name="day">Day</string>
    <string name="hour_min_sec">Hours/Minutes/Seconds</string>
    <string name="date">Date</string>
    <string name="ampm">AM/PM</string>
    <string name="sizes">Sizes</string>
    <string name="hour_separator">Hour separator</string>
    <string name="left_margin">Left margin</string>
    <string name="right_margin">Right margin</string>
    <string name="carrier_text">Carrier text</string>
    <string name="use_custom_text">Use custom text</string>
    <string name="all_uppercase">Use uppercase</string>
    <string name="custom_text">Custom text</string>
    <string name="color">Color</string>
    <string name="weather">Weather</string>
    <string name="update_every">Update every</string>
    <string name="icon_colors_position">Select general icons and colors</string>
    <string name="general_colors">General colors</string>
    <string name="signal_colors">Signal colors</string>
    <string name="keep_whatsapp">Keep WhatsApp without color</string>
    <string name="keep_whatsapp_summary">Some WhatsApp clients have multi-color option, so keep this active for don\'t
        override it
    </string>
    <string name="wifi_icon">WiFi icon</string>
    <string name="signal_icon">Signal icon</string>
    <string name="alarm_icon">Alarm icon</string>
    <string name="bluetooth_icon">Bluetooth icon</string>
    <string name="sound_icon">Sound icon</string>
    <string name="use_lte">Use LTE icon</string>
    <string name="hidden_icons">Hidden icons</string>
    <string name="signal_position">Signal icons position</string>
    <string name="other_mods">Other mods</string>
    <string name="custombg">Custom background</string>
    <string name="type">Type</string>
    <string name="select_image">Select image</string>
    <string name="image_scale">Image scale</string>
    <string name="heads_up_notif">Heads-Up notifications</string>
    <string name="dt2s">Double tap to sleep</string>
    <string name="expand_panel">Expand panel from right side</string>
    <string name="margins_sb">Margins</string>
    <string name="use_custom_color">Use custom colors</string>
    <string name="panel_bg">Panel background</string>
    <string name="settings_button">Settings buttons</string>
    <string name="more_settings_button">More settings button</string>
    <string name="handler_button">Handler button</string>
    <string name="hour">Hour</string>
    <string name="toggles_on">Toggles on</string>
    <string name="toggles_dim">Toggles dim</string>
    <string name="toggles_off">Toggles off</string>
    <string name="toggles_text">Toggles text</string>
    <string name="toggles_divisor">Toggles divisor</string>
    <string name="brightness_icon">Brightness icon</string>
    <string name="brightness_settings_icon">Brightness settings icon</string>
    <string name="br_bar">Brightness bar</string>
    <string name="br_bar_bg">Brightness bar background</string>
    <string name="brightness_max">Max. brightness</string>
    <string name="brightness_controller">Brightness controller</string>
    <string name="toggle_styles">Toggles style</string>
    <string name="toggles">Toggles</string>
    <string name="blur">Blur</string>
    <string name="intensity">Intensity</string>
    <string name="custom_notifs">Customize notifications</string>
    <string name="icon">Icon</string>
    <string name="prim_text">Primary text</string>
    <string name="sec_text">Secondary text</string>
    <string name="name_app">App name</string>
    <string name="hour_div">Hour divisor</string>
    <string name="summary">Summary</string>
    <string name="expand">Expand button</string>
    <string name="notif_settings">Notif. settings text</string>
    <string name="clear_all">Clear all text</string>
    <string name="matrix">Matrix</string>
    <string name="random_color">Use random color</string>
    <string name="use_gradient">Use gradient</string>
    <string name="invert_direction">Invert direction</string>
    <string name="bg_color">Background color</string>
    <string name="txt_color">Text color</string>
    <string name="second_txt_color">Second text color</string>
    <string name="frequency">Frequency</string>
    <string name="outdoor_mode">Outdoor mode</string>
    <string name="icon_on">Icon on</string>
    <string name="icon_off">Icon off</string>
    <string name="color_on">Color on</string>
    <string name="color_off">Color off</string>
    <string name="rotation">Rotation</string>
    <string name="datausage">Data usage</string>
    <string name="device_info">Device info</string>
    <string name="titles_color">Titles color</string>
    <string name="values_color">Values color</string>
    <string name="titles_size">Titles size</string>
    <string name="values_size">Values size</string>
    <string name="titles_font">Titles font</string>
    <string name="values_font">Values font</string>
    <string name="multiuser_icon">Multi-User icon</string>
    <string name="maxtoggles">Max. visible toggles</string>
    <string name="doubletap">Double tap</string>
    <string name="app">App</string>
    <string name="app_txt_color">App text color</string>
    <string name="app_txt_size">Size app text</string>
    <string name="ls_rotation">Lockscreen rotation</string>
    <string name="hide_sb">Hide statusbar</string>
    <string name="wake_usb">Wake-up on USB connection</string>
    <string name="biometrics_reboot">Biometrics on reboot</string>
    <string name="fp_touch">Wake up on FP touch</string>
    <string name="quick_reply">Quick reply always</string>
    <string name="recents_icon">Recents icon</string>
    <string name="home_icon">Home icon</string>
    <string name="back_icon">Back icon</string>
    <string name="use_custom_size">Use custom size</string>
    <string name="landscape_size">Landscape size</string>
    <string name="show_on_ls">Show on lockscreen</string>
    <string name="split_up_down">Split up/down</string>
    <string name="main_color">Main color</string>
    <string name="up_color">Up color</string>
    <string name="down_color">Down color</string>
    <string name="arrows_color">Arrows color</string>
    <string name="listview_animations">Listview animation</string>
    <string name="interpolator_animation">Interpolator animation</string>
    <string name="whitelist">Whitelist</string>
    <string name="low_bt_warning">Low battery warning</string>
    <string name="elements_show">Elements to show</string>
    <string name="confirm_actions">Confirm actions</string>
    <string name="icons_style">Icons style</string>
    <string name="subtxt_color">Subtext color</string>
    <string name="recents_blur_color">Recents blur color</string>
    <string name="rambar">RAM bar</string>
    <string name="ram_bg_used">Background used</string>
    <string name="ram_bg_free">Background free</string>
    <string name="txt_used">Text used</string>
    <string name="txt_free">Text free</string>
    <string name="used_ram_size">Used RAM size</string>
    <string name="free_ram_size">Free RAM size</string>
    <string name="used_ram_font">Used RAM font</string>
    <string name="free_ram_font">Free RAM font</string>
    <string name="no_recents_apps">-No recent apps- text</string>
    <string name="up_margin">Up margin</string>
    <string name="down_margin">Down margin</string>
    <string name="closeall_text">-Close all- text</string>
    <string name="more_settings_icon">More settings icon</string>
    <string name="recents">Recents</string>
    <string name="long_press">Long press</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="vbuttons_on_sb">Virtual buttons on statusbar</string>
    <string name="left">Left</string>
    <string name="short_press">Short press</string>
    <string name="short_press_app">Short press app</string>
    <string name="long_press_app">Long press app</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="statusbar">Statusbar</string>
    <string name="notifpanel">Notification panel</string>
    <string name="netwspeed">Network speedmeter</string>
    <string name="virtual_buttons">Virtual buttons</string>
    <string name="remap_buttons">Remap buttons</string>
    <string name="rebootmenu">Reboot menu</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="navbar">Navigation bar</string>
    <string name="twlauncher">TW launcher</string>
    <string name="others">Other mods</string>
    <string name="minitbattery">3MinitBattery</string>
    <string name="irispreview">Iris preview</string>
    <string name="vbuttons_on_nb">Virtual button on navigation bar</string>
    <string name="screenoff_app">Screen off - App</string>
    <string name="screenoff_shortaction">Screen off - Short press</string>
    <string name="screenon_app">Screen on - App</string>
    <string name="screenon_short">Screen on - Short press</string>
    <string name="whitelist_summary">Apps selected here won\'t be closed on -Kill app- and -Kill recent apps- actions.
    </string>
    <string name="grx_circular_battery">Circular battery options</string>
    <string name="bold_text">Use bold text</string>
    <string name="battery_size">Battery size</string>
    <string name="batt_stroke">Stroke size</string>
    <string name="batt_alpha_animation">Charging alpha animation duration</string>
    <string name="batt_animation_time">Charging animation step duration</string>
    <string name="batt_colors">Battery icon colors</string>
    <string name="batt_framecolor_dark_bgs">Frame color in dark bgs</string>
    <string name="batt_dark_bgs">Battery color in dark bgs</string>
    <string name="batt_text_dark_bgs">Text color in dark bgs</string>
    <string name="critical_bt_warning">Critical battery warning</string>
    <string name="toast_app_closed">Show app closed toast</string>
    <string name="toast_recents_closed">Show recents app closed toast</string>
    <string name="toast_app_whitelisted">Show whitelisted app toast</string>
    <string name="keylight_duration">Keylights duration</string>
    <string name="wof">Fingerprint wake on</string>
    <string name="force_dark">Force night mode</string>
    <string name="fast_charging">Fast charging</string>
    <string name="secure_flag">Bypass secure flag</string>
    <string name="swipe_brightness">Swipe to adjust brightness</string>
    <string name="enable_first_sb">Enable it first on StatusBar preferences</string>
    <string name="force_manual_brightness">Force change to manual brightness</string>
    <string name="block_notif_panel">Block notif. panel usage</string>
    <string name="skip_swipe">Skip swipe for face unlock</string>
</resources>