<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:grx="http://schemas.android.com/apk/res-auto">

    <!-- Velocímetro de red -->
    <GrxSwitchPreference
        android:title="@string/visibility"
        grx:systemType="system"
android:key="dlx_netw_visibility"
        android:defaultValue="0"
        grx:broadCast1="update_network"
         />
    <GrxCheckBoxPreference
        android:title="@string/show_on_ls"
        grx:systemType="system"
android:key="dlx_netw_ls"
        android:defaultValue="0"
        android:dependency="dlx_netw_visibility"
        grx:broadCast1="update_network"
         />
    <GrxSingleSelection
        android:title="@string/position"
        grx:systemType="system"
android:key="dlx_netw_position"
        android:defaultValue="0"
        grx:optionsArray="@array/data_usage_gravity_entries"
        grx:valuesArray="@array/data_usage_gravity_values"
        
        android:dependency="dlx_netw_visibility"
        grx:broadCast1="update_network" />
    <GrxSingleSelection
        android:title="@string/update_every"
        grx:systemType="system"
android:key="dlx_netw_intervals"
        android:defaultValue="1000"
        grx:optionsArray="@array/agc_netw_interval_entries"
        grx:valuesArray="@array/agc_netw_interval_values"
        
        android:dependency="dlx_netw_visibility"
        grx:broadCast1="update_network" />
    <GrxCheckBoxPreference
        android:title="@string/split_up_down"
        grx:systemType="system"
android:key="dlx_netw_showall"
        android:defaultValue="0"
        
        android:dependency="dlx_netw_visibility"
        grx:broadCast1="update_network" />
    <GrxColorPicker
        android:title="@string/main_color"
        grx:systemType="system"
android:key="dlx_netw_singlecolor"
        android:defaultValue="-1107296257"
        grx:colorPickerStyle="flower"
        grx:saveValueOnFly="true"
        grx:depRule="ENABLE#dlx_netw_showall#BOOLEAN#0"
        grx:broadCast1="update_network"
         />
    <GrxColorPicker
        android:title="@string/up_color"
        grx:systemType="system"
android:key="dlx_netw_upcolor"
        android:defaultValue="-1107296257"
        grx:colorPickerStyle="flower"
        grx:saveValueOnFly="true"
        android:dependency="dlx_netw_showall"
        grx:broadCast1="update_network"
         />
    <GrxColorPicker
        android:title="@string/down_color"
        grx:systemType="system"
android:key="dlx_netw_downcolor"
        android:defaultValue="-1107296257"
        grx:colorPickerStyle="flower"
        grx:saveValueOnFly="true"
        android:dependency="dlx_netw_showall"
        grx:broadCast1="update_network"
         />
    <GrxColorPicker
        android:title="@string/arrows_color"
        grx:systemType="system"
android:key="dlx_netw_arrowscolor"
        android:defaultValue="-1107296257"
        grx:colorPickerStyle="flower"
        grx:saveValueOnFly="true"
        android:dependency="dlx_netw_showall"
        grx:broadCast1="update_network"
         />
    <GrxSingleSelection
        android:title="@string/font"
        grx:systemType="system"
android:key="dlx_netw_font"
        android:defaultValue="0"
        android:dependency="dlx_netw_visibility"
        grx:broadCast1="update_network"
        grx:iconsArray="@array/agc_estilo_fuente_drawables"
        grx:optionsArray="@array/agc_estilo_fuente_entries"
        grx:valuesArray="@array/agc_estilo_fuente_values"
         />
    <GrxSeekBar
        android:title="@string/size"
        grx:systemType="system"
android:key="dlx_netw_size"
        android:defaultValue="12"
        android:dependency="dlx_netw_visibility"
        grx:broadCast1="update_network"
        grx:maxValue="25"
        grx:minValue="1"
        grx:interval="1"
         />
    <GrxSeekBar
        android:title="@string/left_margin"
        grx:systemType="system"
android:key="dlx_netw_start"
        android:defaultValue="0"
        android:dependency="dlx_netw_visibility"
        grx:broadCast1="update_network"
        grx:maxValue="70"
        grx:minValue="0"
        grx:interval="1"
         />
    <GrxSeekBar
        android:title="@string/right_margin"
        grx:systemType="system"
android:key="dlx_netw_end"
        android:defaultValue="0"
        android:dependency="dlx_netw_visibility"
        grx:broadCast1="update_network"
        grx:maxValue="70"
        grx:minValue="0"
        grx:interval="1"
         />

</PreferenceScreen>