<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:grx="http://schemas.android.com/apk/res-auto">

    <!-- Posiciones de vistas en pantalla de bloqueo -->
    <GrxPerItemSingleSelection
        android:title="@string/sb_positions_ls"
        grx:systemType="system"
        android:key="dlx_kg_container"
        android:summary="@string/sb_positions_help"
        grx:allowSortOut="true"
        grx:depRule="ENABLE#dlx_hide_kg#BOOLEAN#false"
        grx:commonBcExtra="arg"
        grx:commonBcExtraValue="sb_views"
        android:defaultValue="simple_indicator_tag_lock_carrier_text_label;0|netspeed;2|statusicons;2|minitbt;2|circularbt;2|batterycontainer;2|"
        grx:optionsArray="@array/kgsb_views_positions_options"
        grx:valuesArray="@array/kgsb_views_positions_values"
        grx:spinnerOptionsArray="@array/sb_positions_options"
        grx:spinnerValuesArray="@array/sb_positions_values"
        grx:check_icon_blacklist="true" />

    <GrxSwitchPreference
        android:title="@string/hide_sb"
        grx:systemType="system"
        android:key="dlx_hide_kg"
        android:defaultValue="false"
        grx:commonBcExtra="arg"
        grx:commonBcExtraValue="kg_visibility"
        />

    <!-- Controlador de brillo -->
    <GrxSwitchPreference
        android:title="@string/swipe_brightness"
        grx:systemType="system"
        android:summaryOff="@string/enable_first_sb"
        android:key="dlx_statusbar_slider_kg"
        android:defaultValue="false"
        grx:commonBcExtra="arg"
        grx:depRule="ENABLE#dlx_statusbar_slider#BOOLEAN#true"
        grx:commonBcExtraValue="statusbar_slider" />

    <GrxSwitchPreference
        android:title="@string/block_notif_panel"
        grx:systemType="system"
        android:key="dlx_block_notif_kg"
        android:defaultValue="false"
        grx:commonBcExtra="arg"
        grx:commonBcExtraValue="block_notif_kg"
        />

    <GrxSwitchPreference
        android:title="@string/biometrics_reboot"
        grx:systemType="system"
        android:key="dlx_biometric_always"
        android:defaultValue="false"
         />

    <!-- WOF para S7E/S7/Tab_S3 - default off -->
    <GrxSwitchPreference
        android:title="@string/wof"
        grx:systemType="system"
        grx:commonBcExtra="arg"
        grx:commonBcExtraValue="wof"
        grx:bpRule="SHOW#ro.deluxerom.device#(hero),(gts3lwifi)"
        android:key="dlx_wake_on_fingerprint"
        android:defaultValue="false" />

    <!-- WOF para N8/S8+/S8 - default on -->
    <GrxSwitchPreference
        android:title="@string/wof"
        grx:systemType="system"
        grx:commonBcExtra="arg"
        grx:commonBcExtraValue="wof"
        grx:bpRule="SHOW#ro.deluxerom.device#(great),(dream)"
        android:key="dlx_wake_on_fingerprint"
        android:defaultValue="true" />

    <GrxSwitchPreference
        android:title="@string/skip_swipe"
        grx:systemType="system"
        grx:commonBcExtra="arg"
        grx:commonBcExtraValue="face_unlock"
        grx:bpRule="SHOW#ro.deluxerom.device#(hero)"
        android:key="dlx_face_unlock_skip_swipe"
        android:defaultValue="false" />

    <!-- Permitir respuesta rápida siempre -->
    <GrxSwitchPreference
        android:title="@string/quick_reply"
        grx:systemType="system"
        grx:commonBcExtra="arg"
        grx:commonBcExtraValue="quick_reply"
        android:key="dlx_allow_quickreply"
        android:defaultValue="false" />

</PreferenceScreen>